<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_root"
    android:orientation="vertical" >

    <include layout="@layout/layout_common_back_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/customer_tv_jiben"
            style="@style/PerfTvMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/jibenxinxi" />

        <TextView
            android:id="@+id/customer_tv_guanlianren"
            style="@style/PerfTvMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/guanlianrenxinxi" />

        <TextView
            android:id="@+id/customer_tv_chanpin"
            style="@style/PerfTvMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/chiyouchanpin" />
    </LinearLayout>

    <View style="@style/CommonHorLine" />

    <android.support.v4.view.ViewPager
        android:id="@+id/customer_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

</LinearLayout>